Make sure fieldset names are not cropped

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -244,8 +244,14 @@
         }
     }
 
-    .fieldsetPicker .icon {
-        color: #333;
+    .fieldsetPicker {
+        .icon {
+            color: #333;
+        }
+        ul.elements li {
+            overflow: visible;
+            vertical-align: top;          
+        }
     }
 }
 
